# nexcore-compound-registry

./: Cargo.toml  README.md
src/: cache.rs  chembl.rs  error.rs  lib.rs  pubchem.rs  resolver.rs  types.rs
